@@ -2,7 +2,9 @@
 	$Id$
 -----------------------------------------------------------------------------------------
 2012-02-02	pwessel
-	* pslegend.c:	Did not process -U, and had usage message about obsolete -S
+	* pslegend.c:		Did not process -U, and had usage message about obsolete -S
+	* gmt_proj.c:		For -JE, both projection center and antipode gave x = y = 0.
+				Now, antipode results in NaN, NaN and a flag is set.
 
 2012-01-31	pwessel
 	* pstext.c:		Enhanced -DJ option will shorten diagonal offsets by sqrt(2) to
